add grid filter mutiple select

--- a/projects/icc/option/src/_option.component.theme.scss
+++ b/projects/icc/option/src/_option.component.theme.scss
@@ -9,6 +9,7 @@
     &.selected {
       background-color: icc.icc-theme(icc-option-item-selected-background-color);
       font-weight: bold;
+      color: orangered;
     }
 
     &:hover {
