select option header

--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -45,7 +45,7 @@
         [compareWith]="compareFn.bind(this)"
       >
         <ng-template iccAutocompleteContent>
-          <div *ngIf="fieldConfig.multiSelection" class="icc-select-field-sticky-header">
+          <div *ngIf="hasHeader(fieldConfig)" class="icc-select-field-sticky-header">
             <icc-option *ngIf="fieldConfig.checkAll" (click)="checkAll(selectOptions)">
               <icc-checkbox [checked]="isAllChecked">
                 {{ "ICC.UI.ACTIONS.CHECK_ALL" | translate }}
@@ -56,13 +56,13 @@
                 {{ "ICC.UI.ACTIONS.UNCHECK_ALL" | translate }}
               </icc-checkbox>
             </icc-option>
-            <icc-option *ngIf="fieldConfig.isEmpty" (click)="isEmpty(true)">
-              <icc-checkbox>
+            <icc-option *ngIf="fieldConfig.isEmpty" #refIsEmpty (click)="headerOptionClick(refIsEmpty)">
+              <icc-checkbox [checked]="refIsEmpty.selected">
                 {{ "ICC.UI.ACTIONS.IS_EMPTY" | translate }}
               </icc-checkbox>
             </icc-option>
-            <icc-option *ngIf="fieldConfig.notEmpty" (click)="isEmpty(false)">
-              <icc-checkbox>
+            <icc-option *ngIf="fieldConfig.notEmpty" #refIsNotEmpty (click)="headerOptionClick(refIsNotEmpty)">
+              <icc-checkbox [checked]="refIsNotEmpty.selected">
                 {{ "ICC.UI.ACTIONS.NOT_EMPTY" | translate }}
               </icc-checkbox>
             </icc-option>
