--- a/projects/icc/theme/src/_components.scss
+++ b/projects/icc/theme/src/_components.scss
@@ -12,3 +12,4 @@
 @forward "../../resize/src/resize.directive.theme";
 @forward "../../dashboard/src/dashboard.component.theme";
 @forward "../../calendar/src/calendar.component.theme";
+@forward "../../date-picker/src/date-picker.component.theme";
