--- a/projects/icc/theme/src/_theme.scss
+++ b/projects/icc/theme/src/_theme.scss
@@ -20,4 +20,5 @@
   @include icc.icc-resize-directive-theme();
   @include icc.icc-dashboard-theme();
   @include icc.icc-calendar-theme();
+  @include icc.icc-date-picker-theme();
 }
