--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -4,6 +4,8 @@ $theme: (
   --app-background-color: hsl(0, 0%, 100%),
   app-border-basic-color: #d0c6bc,
   app-text-basic-color: #4b4f54,
+  color-basic-default: #4b4f54,
+  color-basic-transparent-default: #f6f1ed,
 
   //header and footer
   icc-header-background-color: #d2d2d2,
