--- a/projects/icc-demo/src/styles.scss
+++ b/projects/icc-demo/src/styles.scss
@@ -1,9 +1,32 @@
 // use local src theming sass when dev
 @use "../../icc/theme/src/theming" as icc;
 
-// use ng build icc or sass bundle cp sass in the dist
-//@use "../../../dist/icc/theme/src/theming" as icc;
+// TODO remove material
+@use "@angular/material" as mat;
+
+@include mat.all-component-typographies();
+@include mat.elevation-classes();
+@include mat.app-background();
+
+$primary: mat.m2-define-palette(mat.$m2-indigo-palette);
+$accent: mat.m2-define-palette(mat.$m2-orange-palette, A400, 300, A700);
+$warn: mat.m2-define-palette(mat.$m2-red-palette);
+$theme: mat.m2-define-light-theme(
+  (
+    color: (
+      primary: $primary,
+      accent: $accent,
+      warn: $warn,
+    ),
+    typography: mat.m2-define-typography-config(),
+    density: 0,
+  )
+);
+
+@include mat.all-component-themes($theme);
 
 @include icc.icc-install() {
   @include icc.icc-theme-components();
 }
+
+// TODO remove in the angular.json of "projects/icc-demo/src/app/material-theme/themes.scss"
