--- a/projects/icc/date-picker/src/_date-picker.component.theme.scss
+++ b/projects/icc/date-picker/src/_date-picker.component.theme.scss
@@ -24,6 +24,16 @@
     fill: icc.icc-theme(app-text-basic-color);
   }
 
+  /*
+  .mat-calendar-body-selected.mat-calendar-body-today {
+    //box-shadow: inset 0 0 0 1px var(--mat-datepicker-calendar-date-today-selected-state-outline-color, var(--mat-sys-primary));
+    box-shadow: inset 0 0 0 1px red;
+  }
+
+  .mat-calendar-body-cell:not(.mat-calendar-body-disabled):hover>.mat-calendar-body-cell-content:not(.mat-calendar-body-selected):not(.mat-calendar-body-comparison-identical) {
+    background-color: cyan;
+  }*/
+
   .icc-date-range-dates::before {
     color: icc.icc-theme(color-basic-default);
     background-color: icc.icc-theme(color-basic-transparent-default);
