--- a/projects/icc/date-picker/src/picker-overlay/date-picker-overlay.component.scss
+++ b/projects/icc/date-picker/src/picker-overlay/date-picker-overlay.component.scss
@@ -1,9 +1,5 @@
 :host {
   .icc-date-picker-calendar-container {
-    display: flex;
-
-    .icc-date-range-calendar-item {
-      width: 250px;
-    }
+    //display: flex;
   }
 }
