--- a/projects/icc/date-picker/src/picker-overlay/date-picker-overlay.component.scss
+++ b/projects/icc/date-picker/src/picker-overlay/date-picker-overlay.component.scss
@@ -1,5 +1,9 @@
 :host {
-  .icc-date-picker-calendar-container {
-    //display: flex;
+  display: flex;
+  flex-direction: column;
+
+  .icc-date-bottom-bar {
+    display: flex;
+    justify-content: end;
   }
 }
