--- a/projects/icc/date-picker/src/picker-overlay/date-range-picker-overlay.component.html
+++ b/projects/icc/date-picker/src/picker-overlay/date-range-picker-overlay.component.html
@@ -21,3 +21,24 @@
   >
   </icc-calendar-wrapper>
 </div>
+
+<div class="icc-date-bottom-bar">
+  <button icc-button status="primary" (click)="applyNewDates($event)">
+    <span translate>{{ applyLabel }}</span>
+  </button>
+  <button icc-button (click)="discardNewDates($event)">
+    <span translate>{{ cancelLabel }}</span>
+  </button>
+</div>
+<!--
+
+<div class="icc-date-range-calendar-presets">
+  <div class="icc-date-range-menu">
+    <icc-calendar-presets *ngIf="presets" [presets]="presets" (presetChanged)="updateRangeByPreset($event)"></icc-calendar-presets>
+    <div class="icc-date-range-controls">
+      <button icc-button status="primary" (click)="applyNewDates($event)"><span translate>{{applyLabel}}</span></button>
+      <button icc-button (click)="discardNewDates($event)"><span translate>{{cancelLabel}}</span></button>
+    </div>
+  </div>
+</div>
+-->
