--- a/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.html
+++ b/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.html
@@ -3,6 +3,10 @@
 <icc-date-range-picker *ngIf="options" (selectedDateRangeChanged)="updateRange($event)" [options]="options" #pickerOne>
 </icc-date-range-picker>
 
-<div>Simple Date:</div>
-<icc-date-picker *ngIf="dateoptions" (selectedDateChanged)="updateDate($event)" [options]="dateoptions">
+<icc-date-picker
+  *ngIf="dateoptions"
+  [fieldConfig]="fieldConfig"
+  (valueChange)="valueChange($event)"
+  [options]="dateoptions"
+>
 </icc-date-picker>
