--- a/projects/icc/date-picker/src/date-picker/date-picker.component.html
+++ b/projects/icc/date-picker/src/date-picker/date-picker.component.html
@@ -1,24 +1,41 @@
-<div>
-  <icc-form-field class="icc-date-range-date-display" appearance="fill">
+<ng-container *ngIf="form" [formGroup]="form">
+  <icc-form-field
+    [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
+    [iccLabelWidth]="fieldConfig.labelWidth"
+    [iccFieldWidth]="fieldConfig.fieldWidth"
+    [iccFormFieldControl]="field"
+  >
+    <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
+      {{ fieldConfig.fieldLabel | translate }}
+    </icc-label>
     <input
       #calendarInput
       class="icc-date-range-date-input"
+      type="text"
       iccInput
-      [placeholder]="options.placeholder! | translate"
-      [value]="selectedDate"
+      [value]="field.value | localeDate"
       (click)="openCalendar()"
+      [placeholder]="fieldConfig.placeholder! | translate"
+      [disabled]="field.disabled"
+      [required]="required"
       readonly
     />
     <button iccSuffix icc-button [ghost]="true" (click)="openCalendar()">
       <icc-icon icon="calendar"></icc-icon>
     </button>
-    <button *ngIf="selectedDate" iccSuffix icc-button [ghost]="true" (click)="clearSelectedDate($event)">
-      <icc-icon icon="times-circle-o"></icc-icon>
-    </button>
+
+    <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
+    <icc-form-field-errors *ngIf="(field?.touched || field?.dirty) && field?.errors">
+      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
+    </icc-form-field-errors>
   </icc-form-field>
-</div>
+</ng-container>
 
 <!--
+
+
+    
+  <icc-form-field class="icc-date-range-date-display" appearance="fill">
       [iccTooltip]="selectedDate"
       [iccTooltipPosition]="tooltipPosition"
       -->
