add date picker

--- a/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.html
+++ b/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.html
@@ -5,7 +5,7 @@
 
 <icc-date-picker
   *ngIf="dateoptions"
-  [fieldConfig]="fieldConfig"
+  [fieldConfig]="dateFieldConfig"
   (valueChange)="valueChange($event)"
   [options]="dateoptions"
 >
