--- a/projects/icc/date-picker/src/_date-picker.component.theme.scss
+++ b/projects/icc/date-picker/src/_date-picker.component.theme.scss
@@ -56,11 +56,13 @@
     .icc-date-range-selected-date-start {
       .mat-calendar-body-cell-content {
         border-radius: 0.25rem 0 0 0.25rem;
+        background-color: blue;
       }
     }
     .icc-date-range-selected-date-end {
       .mat-calendar-body-cell-content {
         border-radius: 0 0.25rem 0.25rem 0;
+        background-color: blue;
       }
     }
   }
