add date picker

--- a/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.html
+++ b/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.html
@@ -4,8 +4,8 @@
 </icc-date-range-picker>
 
 <icc-date-picker
-  *ngIf="dateoptions"
   [fieldConfig]="dateFieldConfig"
+  [value]="selectedDate"
   (valueChange)="valueChange($event)"
   [options]="dateoptions"
 >
