--- a/projects/icc/date-picker/src/picker-overlay/date-picker-overlay.component.html
+++ b/projects/icc/date-picker/src/picker-overlay/date-picker-overlay.component.html
@@ -10,22 +10,9 @@
 </div>
 <div class="icc-date-bottom-bar">
   <button icc-button status="primary" (click)="applyNewDates($event)">
-    <span translate>{{ applyLabel }}</span>
+    <span translate>{{ "DATE_PICKER.APPLY" }}</span>
   </button>
   <button icc-button (click)="discardNewDates($event)">
-    <span translate>{{ cancelLabel }}</span>
+    <span translate>{{ "DATE_PICKER.CANCEL" }}</span>
   </button>
 </div>
-
-<!--
-  <div class="icc-date-calendar-presets">
-    <div class="icc-date-range-menu">
-      <icc-calendar-presets *ngIf="presets" [presets]="presets" (presetChanged)="updateSelectDateByPreset($event)"></icc-calendar-presets>
-      <div class="icc-date-range-controls">
-        <button icc-button status="primary" (click)="applyNewDates($event)"><span translate>{{applyLabel}}</span></button>
-        <button icc-button (click)="discardNewDates($event)"><span translate>{{cancelLabel}}</span></button>
-        <button icc-button status="danger" (click)="clearSelectedDates($event)"><span translate>{{clearLabel}}</span></button>
-      </div>
-    </div>
-  </div>
-  -->
