--- a/projects/icc/date-picker/src/picker-overlay/date-range-picker-overlay.component.html
+++ b/projects/icc/date-picker/src/picker-overlay/date-range-picker-overlay.component.html
@@ -2,6 +2,8 @@
   <icc-calendar-wrapper
     [prefixLabel]="startDatePrefix"
     [selectedDate]="fromDate"
+    [dateFormat]="dateFormat"
+    [excludeWeekends]="excludeWeekends"
     [minDate]="fromMinDate"
     [maxDate]="fromMaxDate"
     [selectedRangeDates]="selectedRangeDates"
@@ -13,6 +15,8 @@
   <icc-calendar-wrapper
     [prefixLabel]="endDatePrefix"
     [selectedDate]="toDate"
+    [dateFormat]="dateFormat"
+    [excludeWeekends]="excludeWeekends"
     [minDate]="toMinDate"
     [maxDate]="toMaxDate"
     [selectedRangeDates]="selectedRangeDates"
