--- a/projects/icc/date-picker/src/date-picker/date-picker.component.html
+++ b/projects/icc/date-picker/src/date-picker/date-picker.component.html
@@ -10,7 +10,7 @@
     </icc-label>
     <input
       #calendarInput
-      class="icc-date-range-date-input"
+      class="icc-date-field-input"
       type="text"
       iccInput
       [value]="field.value | localeDate"
