--- a/projects/icc/date-picker/src/date-range-picker/date-range-picker.component.html
+++ b/projects/icc/date-picker/src/date-range-picker/date-range-picker.component.html
@@ -1,21 +1,50 @@
-<div>
-  <icc-form-field class="icc-date-range-date-display">
+<ng-container *ngIf="form" [formGroup]="form">
+  <icc-form-field
+    [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
+    [iccLabelWidth]="fieldConfig.labelWidth"
+    [iccFieldWidth]="fieldConfig.fieldWidth"
+    [iccFormFieldControl]="field"
+  >
+    <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
+      {{ fieldConfig.fieldLabel | translate }}
+    </icc-label>
+
     <input
       #calendarInput
-      class="icc-date-range-date-input"
+      class="icc-date-range-field-input"
+      type="text"
       iccInput
-      placeholder="{{ options.placeholder! | translate }}..."
-      [value]="selectedDateRange"
+      [value]="display"
       (click)="openCalendar()"
+      placeholder="{{ fieldConfig.placeholder! | translate }}..."
+      [disabled]="field.disabled"
+      [required]="required"
       readonly
     />
-    <div iccSuffix class="icc-date-range-calendar" (click)="openCalendar()"></div>
-    <button *ngIf="selectedDateRange" iccSuffix icc-button [ghost]="true" (click)="clearDateRange($event)">
-      <icc-icon icon="times-circle-o"></icc-icon>
+
+    <button iccSuffix icc-button [ghost]="true" (click)="openCalendar()">
+      <icc-icon icon="calendar"></icc-icon>
     </button>
+
+    <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
+    <icc-form-field-errors *ngIf="(field?.touched || field?.dirty) && field?.errors">
+      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
+    </icc-form-field-errors>
   </icc-form-field>
-</div>
+</ng-container>
 <!--
+
+     #calendarInput
+      class="icc-date-range-date-input"
+      type="text"
+      iccInput
+      [value]="field.value | localeDate"
+      (click)="openCalendar()"
+      [placeholder]="fieldConfig.placeholder! | translate"
+      [disabled]="field.disabled"
+      [required]="required"
+      readonly
+
       [iccTooltip]="selectedDateRange"
       [iccTooltipPosition]="tooltipPosition"
       -->
