clean date picker

--- a/projects/icc/date-picker/src/picker-overlay/date-range-picker-overlay.component.html
+++ b/projects/icc/date-picker/src/picker-overlay/date-range-picker-overlay.component.html
@@ -22,10 +22,10 @@
 
 <div class="icc-date-bottom-bar">
   <button icc-button status="primary" (click)="applyNewDates($event)">
-    <span translate>{{ "DATE_PICKER.APPLY" }}</span>
+    <span translate>{{ "ICC.UI.ACTIONS.APPLY" }}</span>
   </button>
   <button icc-button (click)="discardNewDates($event)">
-    <span translate>{{ "DATE_PICKER.CANCEL" }}</span>
+    <span translate>{{ "ICC.UI.ACTIONS.CANCEL" }}</span>
   </button>
 </div>
 <!--
