add date range field

--- a/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.html
+++ b/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.html
@@ -3,3 +3,9 @@
 
 <icc-date-picker [fieldConfig]="dateFieldConfig" [value]="selectedDate" (valueChange)="valueChange($event)">
 </icc-date-picker>
+
+<icc-date-range-field [fieldConfig]="dateRangeFieldConfig" [value]="range" (valueChange)="updateRange($event)">
+</icc-date-range-field>
+
+<icc-date-field [fieldConfig]="dateFieldConfig" [value]="selectedDate" (valueChange)="valueChange($event)">
+</icc-date-field>
