--- a/projects/icc/calendar/src/calendar.component.scss
+++ b/projects/icc/calendar/src/calendar.component.scss
@@ -1,14 +1,30 @@
-.icc-calendar {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+:host {
+  display: flex;
+  flex-direction: column;
 
-  .today-btn {
+  mat-calendar {
+    width: 300px;
+    height: 300px;
+  }
+
+  ::ng-deep mat-calendar-header {
+    .mat-calendar-header {
+      padding: 0px 8px;
+
+      .mat-calendar-controls {
+        margin: 0px;
+      }
+    }
+  }
+
+  .icc-date-selected-label {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0.5rem;
+    height: 24px;
 
-    button {
-      width: 100%;
+    .icc-date-range-selected-date-label {
+      padding-left: 5px;
     }
   }
 }
