--- a/projects/icc/calendar/src/_calendar.component.theme.scss
+++ b/projects/icc/calendar/src/_calendar.component.theme.scss
@@ -37,44 +37,36 @@
     display: none;
   }
 
-  /*
-  .mat-calendar-body-selected.mat-calendar-body-today {
-    //box-shadow: inset 0 0 0 1px var(--mat-datepicker-calendar-date-today-selected-state-outline-color, var(--mat-sys-primary));
-    box-shadow: inset 0 0 0 1px red;
-  }
-
-  .mat-calendar-body-cell:not(.mat-calendar-body-disabled):hover>.mat-calendar-body-cell-content:not(.mat-calendar-body-selected):not(.mat-calendar-body-comparison-identical) {
-    background-color: cyan;
-  }*/
-
   .icc-date-range-dates::before {
     color: icc.icc-theme(color-basic-default);
     background-color: icc.icc-theme(color-basic-transparent-default);
   }
 
   icc-calendar {
-    /*
-    .mat-calendar-body-active {
-      .mat-calendar-body-cell-content {
-        background-color: unset !important;
-      }
-    }*/
+    .mat-calendar-body-selected {
+      background-color: blue;
+    }
 
     .icc-date-range-selected-date-start {
       .mat-calendar-body-cell-content {
         border-radius: 0.25rem 0 0 0.25rem;
-        background-color: blue;
+        background-color: blue !important;
       }
     }
     .icc-date-range-selected-date-end {
       .mat-calendar-body-cell-content {
         border-radius: 0 0.25rem 0.25rem 0;
-        background-color: blue;
+        background-color: blue !important;
       }
     }
 
     .mat-calendar-body-today {
       background-color: orangered !important;
+      color: darkmagenta;
+    }
+
+    .mat-calendar-body-cell-content:hover {
+      background-color: green !important;
     }
   }
 }
