--- a/projects/icc/fields/src/date-field/date-picker/date-picker.component.scss
+++ b/projects/icc/fields/src/date-field/date-picker/date-picker.component.scss
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
 
+  ::ng-deep mat-calendar {
+    width: 300px;
+    height: 300px;
+  }
+
   .icc-date-bottom-bar {
     display: flex;
     justify-content: end;
